update to JAXB 4